[package]
description = "A versatile cross-platform script runner and REPL for Rust snippets, expressions and programs.\nAccepts a script file or dynamic options."
name = "thag_rs"
version = "0.1.9"
authors = ["Don Forbes <don.forbes3@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# Include the demo directory in the crate packagename = "thag_rs"
include = [
    "assets/default_config.toml",
    "src/**",
    "Cargo.toml",
    "README.md",
    "build.rs",
    "demo/**",
    "tests/**",
]
readme = "README.md"
repository = "https://github.com/durbanlegend/thag_rs"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["REPL", "command-line", "eval", "runner", "script"]

[package.metadata.wix]
upgrade-guid = "FA5CCD40-AB09-488D-817D-867B69E10F7B"
path-guid = "CCDE9D5F-06C2-42C2-8BF7-6EB41E46A496"
license = false
eula = false

[dependencies]
bitflags = "2.6.0"
cargo-lookup = "0.1.0"
cargo_toml = "0.21.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
crossterm = { version = "0.28.1", features = ["use-dev-tty"] }
dirs = "5.0.1"
documented = "0.9.1"
edit = "0.1.5"
env_logger = { version = "0.11.5", optional = true }
home = "0.5.9"
log = "0.4.22"
mockall = "0.13.1"
nu-ansi-term = "0.50.1"
phf = "0.11.2"
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
ratatui = "0.29.0"
reedline = "0.37.0"
regex = "1.11.1"
scopeguard = "1.2.0"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_merge = "0.1.3"
serde_with = "3.11.0"
side-by-side-diff = "0.1.2"
simplelog = { version = "0.12.2", optional = true }
strict = "0.2.0"
strum = { version = "0.26.3", features = ["derive", "phf"] }
supports-color = "3.0.2"
syn = { version = "2.0.90", features = [
    "extra-traits",
    "full",
    "visit",
    "visit-mut",
] }
termbg = "0.6.1"
thag_core = { version = "0.1.0", path = "../thag_core" }
thag_proc_macros = { version = "0.1.1", path = "../thag_proc_macros" }
toml = "0.8.19"
toml_edit = "0.22.22"
tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
[target.'cfg(windows)'.dependencies]
win32console = "0.1.5"
winapi = "0.3.9"

[lib]
name = "thag_rs"
path = "src/lib.rs"

[[bin]]
name = "thag"
path = "src/bin/thag_rs.rs"

[features]
debug-logs = []
nightly = []
format_snippet = []
default = ["simplelog"]
profile = ["thag_core/profile"]

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
either = "1.13.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
predicates = "3.1.2"
sequential-test = "0.2.4"
tempfile = "3.14.0"
test-generator = "0.3.1"

[[bench]]
name = "filter_bench"
harness = false
