[package]
name = "thag_styling"
version = "0.2.0"
authors = ["Don Forbes <don.forbes3@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Terminal styling system with theme support and color detection for thag_rs"
repository = "https://github.com/durbanlegend/thag_rs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["styling", "terminal", "themes", "colors", "ansi"]
rust-version = "1.82"

[dependencies]
log = "0.4.27"
nu-ansi-term = { version = "0.50.1", optional = true }
phf = { version = "0.12", features = ["macros"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27", features = ["derive", "phf"] }
thag_common = { path = "../thag_common", version = "0.2.0" }
thag_proc_macros = { path = "../thag_proc_macros", version = "0.2" }
thiserror = "2.0"
toml = "0.9"

# Optional dependencies for advanced features
console = { version = "0.15.8", optional = true }
crossterm = { version = "0.28.1", optional = true }
inquire = { version = "0.7.5", optional = true }
ratatui = { version = "0.29.0", optional = true }
scopeguard = { version = "1.2.0", optional = true }
supports-color = { version = "3.0.2", optional = true }
termbg = { version = "0.6.2", optional = true }

[build-dependencies]
phf = { version = "0.12", features = ["macros"] }
tempfile = "3.20"
thag_proc_macros = { path = "../thag_proc_macros", version = "0.2" }
toml = "0.9.0"

[features]
default = ["basic"]

# Core styling without external dependencies
basic = []

# Terminal color detection and background detection
color_detect = [
    "config",
    "ratatui_support",
    "thag_common/color_detect",
    "supports-color",
    "termbg",
    "scopeguard",
]

# Configuration support (uses thag_common config module)
config = ["thag_common/config"]

# Tools integration
tools = []

# Debug logging support
debug_logging = ["thag_common/debug_logging"]

# Inquire integration for themed UI
inquire_theming = ["color_detect", "config", "inquire"]

# Full ratatui integration
ratatui_support = ["ratatui", "scopeguard"]

# Support for thag REPL
nu_ansi_term_support = ["nu-ansi-term"]

# Crossterm integration for cross-platform terminal manipulation
crossterm_support = ["crossterm"]

# Console integration for popular styling library
console_support = ["console"]

# All advanced features
full = [
    "color_detect",
    "config",
    "tools",
    "inquire_theming",
    "ratatui_support",
    "crossterm_support",
    "console_support",
]

[lib]
name = "thag_styling"
path = "src/lib.rs"

[dev-dependencies]
serial_test = "3.2.0"
