[package]
name = "thag_styling"
version = "0.2.1"
authors = ["Don Forbes <don.forbes3@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Terminal styling system with theme support and color detection for thag_rs"
repository = "https://github.com/durbanlegend/thag_rs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["styling", "terminal", "themes", "colors", "ansi"]
rust-version = "1.82"

[dependencies]
document-features = { version = "0.2", optional = true }
log = "0.4"
nu-ansi-term = { version = "0.50", optional = true }
owo-colors = { version = "4.1", optional = true }
phf = { version = "0.12", features = ["macros"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive", "phf"] }
thag_common = { path = "../thag_common", version = "0.2.1" }
thag_proc_macros = { path = "../thag_proc_macros", version = "0.2.1" }
thiserror = "2.0"
toml = "0.9"

# Optional dependencies for advanced features
console = { version = "0.16", optional = true }
crossterm = { version = "0.29", optional = true }
inquire = { version = "0.9", optional = true }
ratatui = { version = "0.29", optional = true }
scopeguard = { version = "1.2", optional = true }
termbg = { version = "0.6", optional = true }

# Image processing dependencies for theme generation
image = { version = "0.25", optional = true }
kmeans_colors = { version = "0.7", optional = true, default-features = false }
auto-palette = { version = "0.9", optional = true }
palette = { version = "0.7", optional = true }

[build-dependencies]
phf = { version = "0.12", features = ["macros"] }
tempfile = "3.20"
thag_proc_macros = { path = "../thag_proc_macros", version = "0.2.1" }
toml = "0.9"

[features]
#! <br><br>
#! The following features are supported:

## Default features: terminal color detection
default = ["color_detect"]

## Core styling without external dependencies
basic = []

## Terminal color detection and background detection
color_detect = [
    "config",
    "thag_common/color_detect",
    "termbg",
    "scopeguard",
]

## Configuration support (uses thag_common config module)
config = ["thag_common/config"]

## Tools integration
tools = []

## Debug logging support
debug_logging = ["thag_common/debug_logging"]

## Documentation features
document-features = ["dep:document-features"]

## `inquire` integration for themed UI
inquire_theming = ["color_detect", "inquire"]

## Full ratatui integration
ratatui_support = ["ratatui", "scopeguard"]

## Support for `thag` REPL
nu_ansi_term_support = ["nu-ansi-term"]

## Integration for terminal theming with `owo-colors`
owo_colors_support = ["owo-colors"]

## Integration for terminal theming with `crossterm`
crossterm_support = ["crossterm"]

## Integration for terminal theming with `console`
console_support = ["console"]

## Image theme generation
image_themes = ["image", "kmeans_colors", "auto-palette", "palette"]

## All advanced features
full = [
    "color_detect",
    "console_support",
    "crossterm_support",
    "image_themes",
    "inquire_theming",
    "nu_ansi_term_support",
    "owo_colors_support",
    "ratatui_support",
    "tools",
]

[lib]
name = "thag_styling"
path = "src/lib.rs"

[dev-dependencies]
crossterm = "0.29"
ratatui = "0.29"
serial_test = "3.2"
supports-color = "3.0"

[lints.clippy]
uninlined_format_args = "allow"

# Feature-gated examples
[[example]]
name = "debug_theme_selection"
required-features = ["ratatui_support"]

[[example]]
name = "diagnostic"
required-features = ["ratatui_support"]

[[example]]
name = "ratatui_integration_test"
required-features = ["ratatui_support"]

[[example]]
name = "ratatui_theming_showcase"
required-features = ["ratatui_support"]

[[example]]
name = "themed_style_demo"
required-features = ["ratatui_support"]

[[example]]
name = "zero_config"
required-features = ["ratatui_support"]

[[example]]
name = "image_theme_generation"
required-features = ["image_themes"]
