[package]
name = "thag_bank_proc_macros"
version = "0.1.0"
description = "Reserve demo proc macros for the thag_rs crate"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
const_gen_proc_macro = "0.1.1"
darling = "0.20.10"
deluxe = "0.5.0"
expander = "2.2.1"
inline_colorization = "0.1.6"
# macro_utils = { path = "../macro_utils" } # Adjust the path as needed
prettyplease = "0.2.31"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
    "proc-macro",
    "visit-mut",
] }

[lib]
proc-macro = true
path = "lib.rs"

[features]
expand = []
default = ["expand"]
