[package]
name = "thag_demo_proc_macros"
version = "0.2.0"
description = "Demo proc macros for the thag_rs crate"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
inline_colorization = "0.1.6"
prettyplease = "0.2.32"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
    "proc-macro",
    "visit-mut",
] }

[lib]
proc-macro = true
path = "lib.rs"

[features]
expand = []
default = ["expand"]
