[package]
name = "thag_proc_macros"
version = "0.1.1"
authors = ["Don Forbes <don.forbes3@gmail.com>"]
description = "proc macros for the thag_rs crate"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
inline_colorization = "0.1.6"
prettyplease = "0.2.30"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "extra-traits",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
    "visit-mut",
] }
toml = { version = "0.8.19" }

[lib]
proc-macro = true
path = "lib.rs"
